--- a/index.html
+++ b/index.html
@@ -14,34 +14,25 @@
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./assets/style/style.css"/>
 </head>
+
 <body>
-  <section class="container">
-    <header class="row">
-      <h1 class="col-8">Header Title</h1>
-      <ul class="nav justify-content-end col-4">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-      </ul>
-    </header>
-  </section>
+
+
+  <header class="container">
+    <section class="row">
+      <h1 class="col-12">Header Title</h1>
+
+    </section>
+  </header>
 
     <!-- Body container -->
-    <section class="container">
+    <main class="container">
+      <!--  -->
         <section class="row">
             <!-- Section for search bar and saved cities on the left -->
-            <section class="col-3">
+            <section class="col-4">
                 <h2>Search for a city:</h2>
-                <input type="text" placeholder="Search cities">
+                <input type="text" placeholder="Search cities" class="col-12">
                 <input type="submit" id="btnSearchCities">
                 <hr class="my-4">
                 <div class="card">
@@ -63,7 +54,7 @@
             </section>
 
             <!-- Section for results on the right -->
-            <section class="col-9 column">
+            <section class="col-8 column">
 
                 <!-- Section for current conditions -->
                 <section id="currentConditionsContainer">
@@ -98,7 +89,7 @@
         </section>
 
 
-    </section>
+    </main>
 
 
 
