--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 
     <!-- Bootstrap CSS file -->
     <link
@@ -20,7 +20,7 @@
   <!-- Header content -->
   <header class="container">
     <section class="row">
-      <h1 class="col-12">Header Title</h1>
+      <h1 class="col-12">Weather Dashboard</h1>
     </section>
   </header>
 
