Improved city card adding to be responsive to API call status

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
 
       <!-- Section for results on the right -->
-      <section class="col-8 column px-1">
+      <section class="col-8 column px-1" id="resultsContainer">
 
         <!-- Section for current conditions -->
         <section id="currentConditionsContainer">
