Improved styling of submit button and field

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <section class="row">
 
       <!-- Section for search bar and saved cities on the left -->
-      <section class="col-4 flex-column justify-content-center align-items-center px-1" id="leftBarContainer">
-        <h2 class="my-1">Search:</h2>
-        <input type="text" placeholder="City name" class="col-12 my-1" id="formSearchCities">
-        <input type="submit" id="btnSearchCities" class="my-1">
+      <section class="col-4 d-flex flex-column align-items-center px-1" id="leftBarContainer">
+
+        <input type="text" placeholder="Search by city name" class="my-1" id="formSearchCities">
+        <input type="submit" id="btnSearchCities" class="my-1" value="Search">
         <hr class="my-2">
 
       </section>
