Added localStorage for search history + rendering of search history on page load

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Section for search bar and saved cities on the left -->
       <section class="col-4 d-flex flex-column align-items-center px-1 customLeftArea" id="leftBarContainer">
         <p class="searchStyling">City search:</p>
-        <input type="text" placeholder="City,State,Country" class="my-1" id="formSearchCities">
+        <input type="text" placeholder="City Name" class="my-1" id="formSearchCities">
         <input type="submit" id="btnSearchCities" class="my-1">
         <hr class="my-2">
 
